# internal/app/v1/model/address.go
@@ -1,9 +1,11 @@
 package model
 
 type Address struct {
-	Street  string `json:"street"`
-	City    string `json:"city"`
-	State   string `json:"state"`
-	ZipCode string `json:"zip_code"`
-	Country string `json:"country"`
+	Flat     string `json:"flat"`
+	Street   string `json:"street"`
+	Landmark string `json:"landmark"`
+	City     string `json:"city"`
+	State    string `json:"state"`
+	Pincode  string `json:"pincode"`
+	Country  string `json:"country"`
 }
